codepkg/objects/DashBoard_Config__mdt.object
<CustomObject>
    <description>Holds the Description and Id of the Dashboards to be shown on home page</description>
    <fields>
        <fullName>Dashboard_Description__c</fullName>
        <label>Dashboard Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dashboard_Id__c</fullName>
        <label>Dashboard Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Label__c</fullName>
        <description>Name of the Dashboard</description>
        <label>Dashboard Label</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>DashBoard Config</label>
    <pluralLabel>DashBoard Configs</pluralLabel>
</CustomObject>